<?php
declare(strict_types=1);

namespace N1215\Http\Router\Exception;

use Exception;

abstract class RoutingException extends Exception
{
}
